# wifi-csi-indoor-localization

./: .gitignore  CHEATSHEET.md  LICENSE  README.md  SESSION_CHECKLIST.md  analyze_overnight_drift.py  aruco_setup.py  aruco_track.py  calibration.json  csi_collector.py  dataset.py  drift_capture.py  exp_ablation.py  exp_extra.py  exp_figures.py  exp_grid_density.py  finalize_drift.py  floor_calibration.json  ios_camera_app_brief.md  lens_calibrate.py  lens_profile.json  live_position.py  marker_layout.json  marker_layout.py  ml_drift.py  mlpipe.py  mlx_net.py  mlx_vs_torch.py  occupancy_eval.py  plot_session.py  repro_v3.py  requirements-gui.txt  requirements.txt  session_metadata.py  torch_net.py  train_final.py  train_v3.py  validate_session.py
csi_clapper/: CMakeLists.txt  sdkconfig
csi_gui/: __init__.py  app.py  app_context.py  applog.py  calibration_status.py  csi_report.py  live_infer.py  session.py  session_labels.py  session_worker.py  sessions_index.py  viz.py
csi_rx/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
csi_rx/main/: CMakeLists.txt  csi_rx_main.c  idf_component.yml
csi_tx/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
tests/: _aruco_reference.py  _csi_collector_golden_ref.py  _shot_harness.py  test_applog.py  test_aruco_headless.py  test_aruco_parity.py  test_bridge_set_target_fps.py  test_calibration_status.py  test_collector.py  test_collector_callbacks.py  test_collector_cli_parity.py  test_empty_room_mode.py  test_gui_frame_provider.py  test_live_infer.py  test_metadata_form.py  test_metadata_write.py  test_ml_drift_ext.py  (+24 more)
(+27 files in other folders)
